# BMT_Group_ARIEMEDI

./: .gitignore  README.md
SDK4.8.0/: .WeDrive  更新说明.txt
SDK4.8.0/C++widgetDemo/src/: .WeDrive  CMakeLists.txt  main.cpp  monitoringWorker.cpp  monitoringWorker.h  picture.qrc  trackingWorker.cpp  trackingWorker.h  widget_Demo.cpp  widget_Demo.h  widget_Demo.ui
SDK4.8.0/C++widgetDemo/src/include/: .WeDrive  ReconstructPointCloud.h  ToolRegi.h  Tracking.h  UdpConnection.h  UdpSearchInfo.h
SDK4.8.0/C++widgetDemo/src/lib/: .WeDrive
SDK4.8.0/C++widgetDemo/src/lib/Debug/: .WeDrive
SDK4.8.0/C++widgetDemo/src/lib/Release/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/aruco/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/bioinspired/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/calib3d/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/ccalib/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/core/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/core/cuda/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/core/detail/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/core/hal/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/core/opencl/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/core/parallel/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/core/utils/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/datasets/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/dnn/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/dnn/utils/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/face/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/features2d/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/features2d/hal/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/flann/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/fuzzy/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/gapi/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/gapi/cpu/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/highgui/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/img_hash/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/imgcodecs/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/imgproc/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/line_descriptor/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/mcc/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/ml/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/objdetect/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/optflow/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/phase_unwrapping/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/photo/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/quality/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/reg/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/rgbd/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/saliency/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/shape/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/stereo/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/stitching/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/structured_light/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/superres/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/surface_matching/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/text/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/tracking/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/video/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/videoio/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/videostab/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/xfeatures2d/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/ximgproc/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/include/opencv2/xphoto/: .WeDrive
SDK4.8.0/C++widgetDemo/src/opencv4/lib/: .WeDrive  OpenCVConfig.cmake  OpenCVModules-release.cmake  opencv_img_hash452.lib  opencv_img_hash452d.lib
ariemedi_ros/src/ariemedi_tracker/: CMakeLists.txt  README.md  README_tracker_node_zh.md  package.xml
ariemedi_ros/src/ariemedi_tracker/armd_sdk/include/: DeviceScan.h  SystemCRCTest.h  ToolRegi.h  Tracking.h  UdpReader.h
ariemedi_ros/src/ariemedi_tracker/armd_sdk/tool/: Tool.arom  toolcali0.arom  toolym.arom
ariemedi_ros/src/ariemedi_tracker/msg/: MarkerPlane.msg  MarkerPosition.msg  ToolTrackingData.msg  Transformation.msg
ariemedi_ros/src/ariemedi_tracker/scripts/: marker_relative_rotation_logger.py  marker_test_plot.py
ariemedi_ros/src/ariemedi_tracker/src/: marker_pair_broadcaster_node.cpp  multi_tracker_node.cpp  tracker_node.cpp
ariemedi_ros/src/ur5e_rtde_controller/: CMakeLists.txt  README.md  package.xml
ariemedi_ros/src/ur5e_rtde_controller/launch/: dual_ur5e_random_motion_record.launch.py  dual_ur5e_tracker_compare.launch.py  test_dual_base_transform.launch.py  ur5e_armd.launch.py
ariemedi_ros/src/ur5e_rtde_controller/scripts/: compute_dual_base_transform.py  dual_eef_marker_data_recorder.py  dual_eef_marker_relative_plot.py  dual_eef_marker_time_aligned_plot_from_numpy.py  dual_ur5e_rtde_node.py  eef_marker_relative_plot.py  test_dual_base_transform.py  ur5e_rtde_node.py
ariemedi_ros/src/us_capture/: CMakeLists.txt  README.md  package.xml
ariemedi_ros/src/us_capture/scripts/: us_pub.py
ndi_api/: CMakeLists.txt  README.md  example.cpp
ndi_api/include/: CombinedApi.h  NdiInterface.h
ndi_api/src/: CombinedApi.cpp  NdiInterface.cpp
(+194 files in other folders)
