<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_rtde_controller</name>
  <version>0.0.1</version>
  <description>UR5e RTDE controller and EEF pose publisher</description>
  <maintainer email="kart_laptop@todo.todo">kart_laptop</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>ariemedi_tracker</depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
